--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "at.js": "^1.5.3",
     "jquery.caret": "^0.3.1",
-    "moment": "^2.21.0"
+    "moment": "^2.21.0",
+    "trix": "^0.11.2"
   }
 }
